--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,37 +6,48 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css">
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
+    <style>
+        body{
+            padding-top: 60px;
+        }
+        .tr-head{background-color: #dff0d8;}
+    </style>
+    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap-responsive.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <h1>Curso Flask</h1>
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <td>Ejemplo 1</td>
-                        <td>Ejemplo 2</td>
-                        <td>Ejemplo 3</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Dato 1</td>
-                        <td>Dato 2</td>
-                        <td>Dato 3</td>
-                    </tr>
-                </tbody>
-            </table>
-            {% block container %}
-
-            {% endblock %}
+    <div class="navbar navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar-inner">
+            <div clas="container">
+                <a href="" class="brand">
+                    IDGS803
+                </a>
+                <ul class="nav">
+                    <li class="active">
+                        <a href="">
+                            <i class="icon-home icon-white"></i> Inicio
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="icon-user icon-white"></i> Usuarios
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <i class="icon-user icon-white"></i> Alumnos
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
+    <div class="container">
+        {% block container%}
+        {% endblock %}
+    </div>
 </body>
-
 </html>
