--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,10 +10,13 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
     <style>
-        body{
+        body {
             padding-top: 60px;
         }
-        .tr-head{background-color: #dff0d8;}
+
+        .tr-head {
+            background-color: #dff0d8;
+        }
     </style>
     <link rel="stylesheet" href="../static/bootstrap/css/bootstrap-responsive.css">
 </head>
@@ -46,8 +49,18 @@
         </div>
     </div>
     <div class="container">
+        {% with messages=get_flashed_messages()%}
+        {%if messages%}
+        {%for message in messages%}
+        <div class="alert alert-success">
+            {{messages}}
+        </div>
+        {%endfor%}
+        {%endif%}
+        {%endwith%}
         {% block container%}
         {% endblock %}
     </div>
 </body>
+
 </html>
